# automation-for-pumped-hydro

./: README.md  pyproject.toml  requirements.txt
examples/: run_gui.py
psh/: __init__.py  computed_columns.py  data_fetcher.py  dataset.py  gui.py  ranking.py
