[project]
name = "psh"
version = "0.1.0"
description = "Evaluating PSH"
authors = { name="Chris McComb", email="ccm@cmu.edu" }
license = { text = "MIT" }
dependencies = [
    "pandas>=1.5.0",
    "gradio"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
